# cycles-dispenser

./: Cargo.toml  README.md  dfx.json
canister/api/: Cargo.toml  can.did
canister/api/src/: main.rs
canister/api/src/lifecycle/: init.rs
canister/api/src/updates/: c2c_request_cycles.rs  mod.rs
canister/impl/: Cargo.toml
canister/impl/src/: lib.rs
canister/impl/src/jobs/: burn_icp_into_cycles.rs
canister/impl/src/lifecycle/: init.rs  inspect_message.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
canister/impl/src/model/: canisters.rs
canister/impl/src/queries/: http_request.rs
canister/impl/src/updates/: add_canister.rs  c2c_request_cycles.rs  mod.rs  set_governance_principals.rs  update_config.rs
client/: Cargo.toml
client/src/: lib.rs
libraries/candid_gen/src/: lib.rs
libraries/types/: Cargo.toml
libraries/types/src/: lib.rs
libraries/utils/: Cargo.toml
libraries/utils/src/: lib.rs
