[workspace]
members = [
    "canister/api",
    "canister/impl",
    "client",
    "libraries/candid_gen",
    "libraries/types",
    "libraries/utils"
]

[workspace.dependencies]
candid = "0.8.3"
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "cfc89a86ae59ee7a12e155ddbc2df74713575071" }
canister_tracing_macros = { git = "https://github.com/open-ic/open-chat", branch = "master" }
getrandom = "0.2.8"
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
quote = "1.0.21"
rand = "0.8.5"
serde = "1.0.145"
serde_bytes = "0.11.7"
serde_json = "1.0.87"
syn = "1.0.103"
tracing = "0.1.37"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
