[workspace]
members = [
    "canister/api",
    "canister/impl",
    "client",
    "libraries/candid_gen",
    "libraries/types",
    "libraries/utils"
]

[workspace.dependencies]
candid = "0.8.4"
canister_logger = { git = "https://github.com/open-ic/ic-utils", rev = "4bcf677f878b6cd9d2a818c5fc1c2f89ad110f8c" }
canister_state_macros = { git = "https://github.com/open-ic/ic-utils", rev = "4bcf677f878b6cd9d2a818c5fc1c2f89ad110f8c" }
canister_tracing_macros = { git = "https://github.com/open-ic/ic-utils", rev = "4bcf677f878b6cd9d2a818c5fc1c2f89ad110f8c" }
getrandom = "0.2.8"
ic-cdk = "0.7.0"
ic-cdk-macros = "0.6.8"
ic-cdk-timers = "0.1.0"
ic-ledger-types = "0.3.0"
quote = "1.0.21"
rand = "0.8.5"
serde = "1.0.145"
serde_bytes = "0.11.7"
serde_json = "1.0.87"
stable_memory = { git = "https://github.com/open-ic/ic-utils", rev = "4bcf677f878b6cd9d2a818c5fc1c2f89ad110f8c" }
syn = "1.0.103"
tracing = "0.1.37"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
