[package]
name = "cycles_dispenser_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canister_state_macros = { workspace = true }
cycles_dispenser = { path = "../canister/api" }
ic-cdk = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
types = { path = "../libraries/types" }
utils = { path = "../libraries/utils" }
