[package]
name = "cycles_dispenser_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cycles_dispenser = { path = "../canister/api" }
ic-cdk = { workspace = true, features = ["timers"] }
tracing = { workspace = true }
types = { path = "../libraries/types" }
