[package]
name = "cycles_dispenser_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canister_logger = { workspace = true }
canister_state_macros = { workspace = true }
canister_tracing_macros = { workspace = true }
cycles_dispenser = { path = "../api" }
ic-cdk = { workspace = true, features = ["timers"] }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
stable_memory = { workspace = true }
tracing = { workspace = true }
types = { path = "../../libraries/types" }
utils = { path = "../../libraries/utils" }
