[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
rand = { workspace = true }
types = { path = "../types" }
